# LiveBox

./: .hintrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml
analysis/: all-icon.psd  app-icon.psd  chatmessage.js  dy.proto  note.md  roomInfo.json  socket.js  stop.txt  stopInfo.json  transport.js
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/command/: live.rs  mod.rs  model.rs  runner.rs
src-tauri/src/inject/: websocket.js
src/apis/: live.ts
src/assets/static/: global.css  vFun.js  vFun.ts  webmssdk.js
src/components/: Live.vue
src/proto/: dy.js  dy.proto
src/types/: index.ts
src/utils/: RustSocket.ts  WebSocket.ts  http.ts  socket.ts
